Kubernetes/CarService/carservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carservice-deployment
spec:
  selector:
    matchLabels:
      app: carservice
  replicas: 2
  template:
    metadata:
      labels:
        app: carservice
    spec:
      containers:
      - name: carservice
        image: jokk/carservice:feature-kubernetes
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: carservice-port
---
apiVersion: v1
kind: Service
metadata:
  name: carservice-service
spec:
  selector:
    app: carservice
  ports:
  - port: 5003
    targetPort: carservice-port
