Kubernetes/CarService/carservice-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carservice-ingress
  labels:
    name: carservice-ingress
spec:
  rules:
    - host: car.bookvacation.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: carservice-service
                port:
                  name: carservice-port
